Fix spacing on pre footer banner

--- a/styles/components/_pre-footer.scss
+++ b/styles/components/_pre-footer.scss
@@ -56,7 +56,7 @@
       line-height: 1.7;
 
       @media (min-width: $screen-sm) {
-        margin-top: 40px;
+        margin-top: 24px;
         font-size: 20px;
       }
     }
